--- a/Frontend/src/pages/Home/Notes.css
+++ b/Frontend/src/pages/Home/Notes.css
@@ -2,4 +2,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.5rem;
+}
+.individualNotesContainer {
+  display: flex;
+  gap: 0.5rem;
+}
+.individualNote {
+  width: 200px;
+  height: 200px;
+  background-image: url(note.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  letter-spacing: 0.3rem;
+}
+
+.titleNote {
+  font-size: 1rem;
+  margin-bottom: 0;
+  color: white;
+  position: fixed;
+}
+.contentNote {
+  margin: 4rem 1.5rem auto;
+  overflow: auto;
 }
